--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div
             style="color: white; background-color: #009688;text-align: center;padding: 40px 0;font-size: 40px;font-size: bold;">
-            يبووووويا</div>
+            Print Ur Elements</div>
         <form action="">
             <input type="number" min="1" name="elements" class="input" placeholder="Number Of Elements" />
             <input type="text" name="texts" class="input" placeholder="Elements Text" />
